--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <canvas width="700px" height="500" id="paint-canvas" class="paint-canvas-styles"></canvas>
     </div>
   
-	  <script src="paint.js"></script>
+	  <!-- <script src="paint.js"></script> -->
+	  <script src="understandingFloodFill.js"></script>
   </body>
 </html>
 
