Now to the other features...
I am gunna be adding an undo, redo, and save functionality to this and then it will be done for now!

--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
       <canvas width="700px" height="500" id="paint-canvas" class="paint-canvas-styles"></canvas>
     </div>
   
-	  <!-- <script src="paint.js"></script> -->
-	  <script src="understandingFloodFill.js"></script>
+	  <script src="paint.js"></script>
   </body>
 </html>
-
-<!-- <div id="spike" class="spikeStyles"></div> -->
