GOT UNDO AND REDO!
Now I just need to get save working! I'm sure it will have to deal with how I get the canvas data for the undo and redo...

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <button id="fill-bucket">Fill</button>
       <input type="color" id="color-picker"/>
       <input type="range" id="size-picker"/>
+      <button id="undo">UNDO</button>
+      <button id="redo">REDO</button>
+
     </div>
     <div>
       <canvas width="700px" height="500" id="paint-canvas" class="paint-canvas-styles"></canvas>
