Added Save Button!
The Project's functionality is at a place where I want it to be, so I will move on to preparing for my interview with Zwift!

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <input type="range" id="size-picker"/>
       <button id="undo">UNDO</button>
       <button id="redo">REDO</button>
+      <button id="save">Save</button>
 
     </div>
     <div>
